create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -152,14 +152,14 @@
         <div class="media-container-row">
 
             <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1">My content</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1"><strong><em>My content</em></strong></h1>
                 <div class="mbr-section-text mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-1"><strong><em>Here is a video that I edited</em></strong><br><strong><em>which I am most proud of!</em></strong></p>
+                    <p class="mbr-text mbr-fonts-style display-1">Here is a video that I edited<br>which I am most proud of!</p>
                 </div>
                 
             </div>
 
-            <div class="mbr-figure" style="width: 100%;"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/R2-4ssBaIg4?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=1&amp;playlist=R2-4ssBaIg4" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div class="mbr-figure" style="width: 100%;"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/R2-4ssBaIg4?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
 
         </div>
     </div>
@@ -181,7 +181,7 @@
     <div class="form-container">
         <div class="media-container-column" data-form-type="formoid">
             <div data-form-alert="" hidden="" class="align-center">Thanks for filling out the form!</div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="g1AgFPkfR58APWWxmNy5KeDutI4dO/MaeSYu4Fon7Fw2+mmr65GXZI+Sa6xb5kC1QY3omKQTrM6SLZ5tl++5XbPn73UXcmyYJOvRmhHX9l/WjqSUIEL7lXty/KwtnyxF">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TTAdQVOXz7pnR8zurwY4EpiuU0UvTkA5hCXoySfxmrv6dc5R/KGIvgQuld4ae8DNY5zBsq3B/uJOf7Un3mxuisdhLE/TvQf6nCBUgmg3cWptKPLm75vgoO3MWhcPeTLp">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Username" required="" id="name-header15-a">
